--- a/public/index.html
+++ b/public/index.html
@@ -86,12 +86,23 @@
                                 placeholder="Enter description"></textarea>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-3 mb-3">
                                 <label for="composition" class="form-label">Composition</label>
                                 <input type="text" class="form-control" id="composition" name="composition"
                                     placeholder="Enter composition">
                             </div>
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-3 mb-3">
+                                <label for="composition" class="form-label">Weigth</label>
+                                <input type="text" class="form-control" id="weigth" name="weigth"
+                                    placeholder="Weigth per unit (or pair)">
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <label for="composition" class="form-label">Volumetric weigth (cm3)</label>
+                                <input type="text" class="form-control" id="volumetricWeigth" name="volumetricWeigth"
+                                    placeholder="Weigth per unit (or pair)">
+                            </div>
+                            
+                            <div class="col-md-3 mb-3">
                                 <label for="cat" class="form-label">Category</label>
                                 <select class="form-select" id="cat" name="cat">
                                     <option value="socks">Socks</option>
