Mensaje del commit

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
                 </a>
 
                 <ul class="nav col-12 col-lg-auto mx-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                    <li><a href="/generateReport.html" class="nav-link px-2 text-white">Generate excel report</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -270,54 +269,6 @@
                                     rows="3" placeholder="Enter description"></textarea>
                             </div>
                         </div>
-                        <!-- 
-                <div class="collapse row" id="collapseSpanish">
-                    <div class="col-md-6 mb-3">
-                        <label for="titleSpanish" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="titleSpanish" name="productTitle" placeholder="Enter title">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="compositionSpanish" class="form-label">Composition</label>
-                        <input type="text" class="form-control" id="compositionSpanish" name="compositionSpanish" placeholder="Enter composition">
-                    </div>
-                    <div class="mb-3">
-                        <label for="descriptionSpanish" class="form-label">Description</label>
-                        <textarea class="form-control" id="descriptionSpanish" name="productDescSpanish" rows="3"
-                            placeholder="Enter description"></textarea>
-                    </div>
-                </div>
-
-                <div class="collapse row" id="collapseGerman">
-                    <div class="col-md-6 mb-3">
-                        <label for="titleGerman" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="titleGerman" name="productTitleGerman" placeholder="Enter title">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="compositionGerman" class="form-label">Composition</label>
-                        <input type="text" class="form-control" id="compositionGerman" name="compositionGerman" placeholder="Enter composition">
-                    </div>
-                    <div class="mb-3">
-                        <label for="descriptionGerman" class="form-label">Description</label>
-                        <textarea class="form-control" id="descriptionGerman" name="productDescGerman" rows="3"
-                            placeholder="Enter description"></textarea>
-                    </div>
-                </div>
-
-                <div class="collapse row" id="collapseItalian">
-                    <div class="col-md-6 mb-3">
-                        <label for="titleItalian" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="titleItalian" name="productTitleItalian" placeholder="Enter title">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="compositionItalian" class="form-label">Composition</label>
-                        <input type="text" class="form-control" id="compositionItalian" name="compositionItalian" placeholder="Enter composition">
-                    </div>
-                    <div class="mb-3">
-                        <label for="descriptionItalian" class="form-label">Description</label>
-                        <textarea class="form-control" id="descriptionItalian" name="productDescItalian" rows="3"
-                            placeholder="Enter description"></textarea>
-                    </div>
-                </div> -->
                 </div>
 
 
