--- a/public/apiDoc.html
+++ b/public/apiDoc.html
@@ -1,126 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iFZ3NpLd5e3mF/JJao5l+6E4m/nzmO+OrCRAZ2N2Q8Ina5H2D5BO1WIlQ" crossorigin="anonymous">
-    <title>Kingly Digital Suite API Documentation</title>
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-
-        .container {
-            background-color: #ffffff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            padding: 30px;
-            margin-top: 50px;
-        }
-
-        h1, h2, h3 {
-            color: #343a40;
-        }
-
-        code {
-            background-color: #f8f9fa;
-            padding: 2px 6px;
-            border: 1px solid #dae0e5;
-            border-radius: 4px;
-        }
-
-        section {
-            margin-bottom: 30px;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>API Documentation</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 20px;
+    padding: 0;
+  }
+  h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  h3 {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  p {
+    margin-bottom: 10px;
+  }
+  code {
+    font-family: Consolas, monospace;
+    font-size: 14px;
+    background-color: #f4f4f4;
+    padding: 5px 10px;
+    border-radius: 5px;
+  }
+  pre {
+    background-color: #f4f4f4;
+    padding: 10px;
+    border-radius: 5px;
+  }
+</style>
 </head>
 <body>
 
-<div class="container">
-    <h1 class="text-center">Kingly Digital Suite API Documentation</h1>
+<h1>API Documentation</h1>
 
-    <section>
-        <h2>Introduction</h2>
-        <p>Welcome to the Kingly Digital Suite (KDS) API documentation. The KDS API provides access to a centralized repository of product references, facilitating consistent and updated information sharing with our customers. The API is designed to be versatile and user-friendly, catering to various product categories. </p>
-    </section>
+<h2>Overview</h2>
+<p>This API provides endpoints to access product information based on language, reference, and category. It allows users to retrieve product data in various languages.</p>
 
-    <section>
-        <h2>Base URL</h2>
-        <p>The base URL for accessing the KDS API is:</p>
-        <code>https://digital.wearekingly.com/api/</code>
-    </section>
+<h2>Base URL</h2>
+<p>The base URL for accessing the API is <code>https://digital.wearekingly.com/api</code>.</p>
 
-    <section>
-        <h2>Language Support</h2>
-        <p>The API supports multiple languages for data retrieval. You can specify the desired language using the following path:</p>
-        <ul>
-            <li><code>/en/</code> for English</li>
-            <li><code>/es/</code> for Spanish</li>
-            <li><code>/fr/</code> for French</li>
-            <li><code>/it/</code> for Italian</li>
-            <li><code>/de/</code> for German</li>
-        </ul>
-        <p>Note: Prices may vary based on the country, with a 5% increase or no increase. Ensure to use the appropriate language path based on your requirements.</p>
-    </section>
+<h2>Endpoints</h2>
 
-    <section>
-        <h2>Category Endpoints</h2>
-        <p>Retrieve products in the following categories:</p>
-        <ul>
-            <li><code>/socks</code></li>
-            <li><code>/compactTextiles</code></li>
-            <li><code>/packaging</code></li>
-            <li><code>/knitwear</code></li>
-            <li><code>/towels</code></li>
-        </ul>
-    </section>
+<h3>Get All Products</h3>
+<p><strong>URL:</strong> <code>/:language</code></p>
+<p><strong>Method:</strong> GET</p>
+<p><strong>Description:</strong> Retrieves all products available in the specified language.</p>
+<p><strong>Parameters:</strong></p>
+<pre>
+language (required): The language code for which products are to be fetched.
+</pre>
+<p><strong>Response:</strong></p>
+<pre>
+200 OK: Returns a JSON array containing all products in the specified language.
+</pre>
+<p><strong>Example:</strong></p>
+<pre><code>GET https://digital.wearekingly.com/api/en</code></pre>
 
-    <section>
-        <h2>Example Usage</h2>
-        <p>Retrieve Socks in English:</p>
-        <code>GET https://digital.wearekingly.com/api/en/socks</code>
-        <p>Retrieve Compact Textiles in French:</p>
-        <code>GET https://digital.wearekingly.com/api/fr/compactTextiles</code>
-        <p>Retrieve the reference KS04 in German:</p>
-        <code>GET https://digital.wearekingly.com/api/de/ref/KS04</code>
-    </section>
+<h3>Get Single Product</h3>
+<p><strong>URL:</strong> <code>/:language/ref/:ref</code></p>
+<p><strong>Method:</strong> GET</p>
+<p><strong>Description:</strong> Retrieves information about a single product based on its reference for the specified language.</p>
+<p><strong>Parameters:</strong></p>
+<pre>
+language (required): The language code for which the product is to be fetched.
+ref (required): The reference code of the product.
+</pre>
+<p><strong>Response:</strong></p>
+<pre>
+200 OK: Returns a JSON object containing details of the specified product.
+</pre>
+<p><strong>Example:</strong></p>
+<pre><code>GET https://digital.wearekingly.com/api/en/ref/KS04</code></pre>
 
-    <section>
-        <h2>Response Format</h2>
-        <p>The API response provides detailed product information, including title, description, composition, pricing, and weight.</p>
-        <code>
-            [
-                {
-                    "ref": "ProductReferenceCode",
-                    "productTitle": "Product Title",
-                    "productDesc": "Product Description",
-                    // Additional language-specific fields
-                    "cat": "Product Category",
-                    "composition": "Product Composition",
-                    "prices": "{\"Quantity1\": Price1, \"Quantity2\": Price2, ...}",
-                    "weight": ProductWeight
-                }
-            ]
-        </code>
-    </section>
+<h3>Get Products by Category</h3>
+<p><strong>URL:</strong> <code>/:language/cat/:cat</code></p>
+<p><strong>Method:</strong> GET</p>
+<p><strong>Description:</strong> Retrieves products belonging to the specified category in the given language.</p>
+<p><strong>Parameters:</strong></p>
+<pre>
+language (required): The language code for which products are to be fetched.
+cat (required): The category of products to be retrieved. Available categories are: socks, compactTextiles, packaging, knitwear, and towels.
+</pre>
+<p><strong>Response:</strong></p>
+<pre>
+200 OK: Returns a JSON array containing products belonging to the specified category.
+</pre>
+<p><strong>Example:</strong></p>
+<pre><code>GET https://digital.wearekingly.com/api/en/cat/socks</code></pre>
 
-    <section>
-        <h2>Conclusion</h2>
-        <p>The Kingly Digital Suite API empowers you to seamlessly integrate product information into your applications and services. For any inquiries or assistance, please contact our support team at <a href="mailto:digital@wearekingly.com">digital@wearekingly.com</a>.</p>
-    </section>
-</div>
+<h2>Language Support</h2>
+<p>This API supports multiple languages for product information. The language can be specified in the request path using language codes such as en (English), es (Spanish), fr (French), it (Italian), de (German).</p>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-0vQDbB6KXE1HUYIEICJzUER9L6inuFeuTaZ2bAu/JCFUY2CrMFgoUofQilMWpA2H" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-eE6mgnIjVD6p5o6rRofR3MGAs05W1bXtvG6HBxA0X5BRb5v2f+JVEZgqRG1k3IxU" crossorigin="anonymous"></script>
+<h2>Response Format</h2>
+<p>The API returns responses in JSON format.</p>
+
+<h2>Error Handling</h2>
+<p><code>400 Bad Request:</code> Invalid request parameters or missing required parameters.</p>
+<p><code>404 Not Found:</code> The requested resource was not found.</p>
+<p><code>500 Internal Server Error:</code> An unexpected error occurred on the server.</p>
+
+<h2>Example Response Object</h2>
+<pre><code>[
+    {
+        "ref": "KS04",
+        "imageUrl": "",
+        "images": "{\"images\": [\"None\"]}",
+        "cat": "socks",
+        "prices": {
+            //Prices here
+        },
+        "weight": 54,
+        "volumetricWeight": 0,
+        "title_en": "Premium Classic Crew by KINGLY Socks",
+        "desc_en": "Personalized knitted socks.",
+        "comp_en": "80% Combed cotton for comfort. 17%Regenerated eco-friendly Nylon. 3%Elastane for stretch.",
+        "title_es": "Premium Clásico Crew por KINGLY Socks",
+        "desc_es": "Calcetines de punto personalizados.",
+        "comp_es": "undefined",
+        "title_fr": "Premium Classic Crew par KINGLY Socks",
+        "desc_fr": "Chaussettes tricotées personnalisées.",
+        "comp_fr": "undefined",
+        "title_de": "Premium Classic Crew von KINGLY Socks",
+        "desc_de": "Personalisierte gestrickte Socken.",
+        "comp_de": "undefined",
+        "title_it": "Premium Classic Crew di KINGLY Socks",
+        "desc_it": "Calzini lavorati a maglia personalizzati.",
+        "comp_it": "undefined"
+    }
+]</code></pre>
 
 </body>
 </html>
